buildscript {
	ext {
		springBootVersion = '1.4.0.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'spring-boot'

jar {
	baseName = 'tweebot-api'
	version = '0.0.2'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
	mavenCentral()
}


dependencies {
	
	compile("org.springframework.boot:spring-boot-starter-web")
	
	//---- REST ----
	compile('com.fasterxml.jackson.core:jackson-databind')
	
	//---- DB -----
	compile('org.springframework.boot:spring-boot-starter-data-jpa')
	compile('com.h2database:h2')
	compile('mysql:mysql-connector-java:5.1.13')
	
	//---- OTHER ----
	compile('org.projectlombok:lombok:1.16.8')
	compile('com.google.guava:guava:19.0')
	compile('org.apache.commons:commons-lang3:3.4')
	compile('org.twitter4j:twitter4j-core:4.0.4')
	compile group: 'org.json', name: 'json', version: '20160212'
	compile "com.stripe:stripe-java:3.5.0"
	
	//---- TEST ----
	testCompile('org.springframework.boot:spring-boot-starter-test') 
	testCompile('org.hamcrest:hamcrest-all:1.3')
}


eclipse {
	classpath {
		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
	}
}
